adjusted neural net

--- a/test1.Rmd
+++ b/test1.Rmd
@@ -1526,4 +1526,21 @@ plot(model,rep = "best")
 
 
 ```
+
+
+```{r}
+
+
+#library(keras)
+
+#install_keras()
+
+
+library(keras)
+mnist <- dataset_mnist()
+x_train <- mnist$train$x
+y_train <- mnist$train$y
+x_test <- mnist$test$x
+y_test <- mnist$test$y
+```
     
